--- a/pymaster/templates/admin/index.html
+++ b/pymaster/templates/admin/index.html
@@ -5,5 +5,6 @@
 
 <h1>Painel Administrativo</h1>
 
+<button onclick="location.href='/'" type="button" class="btn btn-primary">Retornar ao site</button>
 <button onclick="location.href='/logout'" type="button" class="btn btn-secondary">Logout</button>
 {% endblock %}
