--- a/pymaster/templates/admin/index.html
+++ b/pymaster/templates/admin/index.html
@@ -4,7 +4,8 @@
 {% block body %}
 
 <h1>Painel Administrativo</h1>
-
+<br>
+<p>Atenção: <span>O Painel Administrativo está sem proteção de forma proposital.</span></p>
 <button onclick="location.href='/'" type="button" class="btn btn-primary">Retornar ao site</button>
 <!--<button onclick="location.href='/logout'" type="button" class="btn btn-secondary">Logout</button>-->
 {% endblock %}
