--- a/pymaster/templates/admin/index.html
+++ b/pymaster/templates/admin/index.html
@@ -9,7 +9,7 @@
 <h3>Atenção: <span>O Painel Administrativo está sem proteção de forma proposital.</span></h3>
 <br>
 <h4>
-  As alterações feitas no banco de dados através do painel administrativo tem efeito temporario no site. Porém o banco de dados irá restaurar seus dados originais de forma automática!
+  As alterações feitas no banco de dados através do painel administrativo tem efeito temporario no site. O banco de dados irá restaurar seus valores originais de forma automática!
 </h4>
 
 
