--- a/pymaster/blueprints/webui/templates/player.html
+++ b/pymaster/blueprints/webui/templates/player.html
@@ -4,7 +4,7 @@
 <h1>{{ player.name }}</h1>
 
 <div class="jumbotron">
- <img src= {{"https://pesmaster.fra1.cdn.digitaloceanspaces.com"+player.image}}>
+ <img src= {{"https://www.pesmaster.com"+player.image}}>
 
 <h2>Nation: {{player.nation}}</h2>
 <p>
@@ -16,7 +16,7 @@
 <p>
     Position: {{player.pos}}
 </p>
-<a href={{"https://pesmaster.fra1.cdn.digitaloceanspaces.com"+player.selfLink}}>Player Link in PesMaster</a>
+<a href={{"https://www.pesmaster.com"+player.selfLink}}>Player Link in PesMaster</a>
 </div>
 </div>
 {% endblock %}
